[bugfix] modify suggestion z-index

--- a/assets/widget/suggestion/suggestion.css
+++ b/assets/widget/suggestion/suggestion.css
@@ -1,12 +1,12 @@
 .ui-input-mask{
 	position: relative;
-	z-index: 9999;
+	z-index: 100;
 }
 
 .ui-suggestion{
 	position: absolute;
 	display: none;
-	z-index: 9999;
+	z-index: 100;
 }
 
 .ui-suggestion ul li{
